[package]
name = "vbdot"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "My own dotfiles manager"
repository = "https://github.com/vbalien/vbdot"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.2", features = ["derive"] }
home = "0.5.5"
inquire = "0.6.2"
path-slash = "0.2.1"
relative-path = "1.9.0"
serde = { version = "1.0.188", features = ["serde_derive"] }
toml_edit = { version = "0.19.14", features = ["serde"] }
